# DMOSpeech2

./: .gitignore  README.md  generate_audio.py  pyproject.toml
dmospeech2/: ctcmodel.py  discriminator_conformer.py  dmd_trainer.py  duration_trainer.py  duration_trainer_with_prompt.py  ecapa_tdnn.py  grpo_duration_trainer.py  guidance_model.py  infer.py  unimodel.py
dmospeech2/f5_tts/: api.py  socket_server.py
dmospeech2/f5_tts/eval/: eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py  utils_eval.py
dmospeech2/f5_tts/infer/: README.md  infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
dmospeech2/f5_tts/model/: __init__.py  cfm.py  dataset.py  trainer.py  utils.py
dmospeech2/f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
dmospeech2/f5_tts/model_new/: __init__.py  cfm.py  dataset.py  modules.py  trainer.py
dmospeech2/f5_tts/model_new/backbones/: dit.py  mmdit.py  unett.py
dmospeech2/f5_tts/runtime/triton_trtllm/: benchmark.py
dmospeech2/f5_tts/runtime/triton_trtllm/model_repo_f5_tts/f5_tts/1/: model.py
dmospeech2/f5_tts/scripts/: count_params_gflops.py
dmospeech2/f5_tts/train/: finetune_cli.py  finetune_gradio.py  train.py
dmospeech2/f5_tts/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_emilia_v2.py  prepare_wenetspeech4tts.py
