[project]
name = "dmospeech2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0",
    "cached-path>=1.7.3",
    "click>=8.2.1",
    "datasets>=4.0.0",
    "ema-pytorch>=0.5.2",
    "gradio>=3.45.2",
    "gradio-utils",
    "hydra-core>=1.3.0",
    "ipywidgets>=8.1.7",
    "jieba>=0.42.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy<=1.26.4",
    "pydantic<=2.10.6",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "soundfile>=0.13.1",
    "tomli>=2.2.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.65.0",
    "transformers>=4.53.2",
    "transformers-stream-generator>=0.0.5",
    "unidecode>=1.4.0",
    "vocos>=0.1.0",
    "wandb>=0.21.0",
    "x-transformers>=1.31.14",
]

[tool.uv.sources]
gradio-utils = { git = "https://github.com/JarodMica/gradio_utils.git" }
